fix: spacing

--- a/blocks/post-cards/post-cards.css
+++ b/blocks/post-cards/post-cards.css
@@ -179,5 +179,5 @@ main .post-cards .show-more-cards-container .show-more-cards:hover {
 }
 
 .post main .post-cards {
-  min-height: 500px;
+  min-height: 550px;
 }
